--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="header__line"></div>
         </header>
         <main>
-            <section class="profile content__section content__section_width_mobile">
+            <section class="profile content__section content__section_mobile">
                 <img class="profile__avatar" src="images/profile/avatar.jpg" alt="Аватар">
                 <div class="profile__info">
                     <h1 class="profile__name">Жак-Ив Кусто</h1>
@@ -23,7 +23,7 @@
                 </div>
                 <button class="profile__add-btn button"></button>
             </section>
-            <section class="elements content__section content__section_width_mobile">
+            <section class="elements content__section content__section_mobile">
                 <article class="element">
                     <img class="element__image" src="images/elements/karachaevsk.jpg" alt="Карачаевск">
                     <div class="element__container">
