--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <a class="link" href="#"><img class="header__logo" src="images/header/logo.svg" alt="Логотип"></a>
             <div class="header__line"></div>
         </header>
-        <main>
+        <main class="content">
             <section class="profile content__section content__section_mobile">
                 <img class="profile__avatar" src="images/profile/avatar.jpg" alt="Аватар">
                 <div class="profile__info">
