--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
                 <div class="popup__container">
                     <form class="popup__form">
                         <h2 class="popup__name">Редактировать профиль</h2>
-                        <input type="text" class="popup__input-fld popup__profile_type_name" value="" placeholder="Введите имя">
-                        <input type="text" class="popup__input-fld popup__profile_type_job" value="" placeholder="Введите род занятий">
+                        <input type="text" class="popup__input-fld popup__input-fld_type_name" value="" placeholder="Введите имя">
+                        <input type="text" class="popup__input-fld popup__input-fld_type_job" value="" placeholder="Введите род занятий">
                         <input type="submit" class="popup__save-btn button" value="Сохранить">
                     </form>
                     <button class="popup__close-btn button"></button>
