--- a/index.html
+++ b/index.html
@@ -11,77 +11,76 @@
     <div class="page__container">
         <header class="header">
             <a class="link" href="#"><img class="header__logo" src="images/header/logo.svg" alt="Логотип"></a>
-            <div class="header__line"></div>
         </header>
         <main class="content">
             <section class="profile content__section content__section_mobile">
                 <img class="profile__avatar" src="images/profile/avatar.jpg" alt="Аватар">
                 <div class="profile__info">
                     <h1 class="profile__name">Жак-Ив Кусто</h1>
-                    <button class="profile__edit-btn button"></button>
+                    <button type="button" class="profile__edit-btn button" area-label="Изменить"></button>
                     <p class="profile__job">Исследователь океана</p>
                 </div>
-                <button class="profile__add-btn button"></button>
+                <button type="button" class="profile__add-btn button" area-label="Добавить"></button>
             </section>
-            <section class="elements content__section content__section_mobile">
-                <article class="element">
-                    <img class="element__image" src="images/elements/karachaevsk.jpg" alt="Карачаевск">
-                    <div class="element__container">
-                        <h2 class="element__name">Карачаевск</h2>
-                        <button class="element__like-btn button"></button>
+            <section class="cards content__section content__section_mobile">
+                <article class="card">
+                    <img class="card__image" src="images/cards/karachaevsk.jpg" alt="Карачаевск">
+                    <div class="card__container">
+                        <h2 class="card__name">Карачаевск</h2>
+                        <button type="button" class="card__like-btn button" area-label="Понравилось"></button>
                     </div>
                 </article>
-                <article class="element">
-                    <img class="element__image" src="images/elements/elbrus.jpg" alt="Гора Эльбрус">
-                    <div class="element__container">
-                        <h2 class="element__name">Гора Эльбрус</h2>
-                        <button class="element__like-btn button"></button>
+                <article class="card">
+                    <img class="card__image" src="images/cards/elbrus.jpg" alt="Гора Эльбрус">
+                    <div class="card__container">
+                        <h2 class="card__name">Гора Эльбрус</h2>
+                        <button type="button" class="card__like-btn button" area-label="Понравилось"></button>
                     </div>
                 </article>
-                <article class="element">
-                    <img class="element__image" src="images/elements/dombay.jpg" alt="Домбай">
-                    <div class="element__container">
-                        <h2 class="element__name">Домбай</h2>
-                        <button class="element__like-btn button"></button>
+                <article class="card">
+                    <img class="card__image" src="images/cards/dombay.jpg" alt="Домбай">
+                    <div class="card__container">
+                        <h2 class="card__name">Домбай</h2>
+                        <button type="button" class="card__like-btn button" area-label="Понравилось"></button>
                     </div>
                 </article>
-                <article class="element">
-                    <img class="element__image" src="images/elements/karelia.jpg" alt="Карелия">
-                    <div class="element__container">
-                        <h2 class="element__name">Карелия</h2>
-                        <button class="element__like-btn button"></button>
+                <article class="card">
+                    <img class="card__image" src="images/cards/karelia.jpg" alt="Карелия">
+                    <div class="card__container">
+                        <h2 class="card__name">Карелия</h2>
+                        <button type="button" class="card__like-btn button" area-label="Понравилось"></button>
                     </div>
                 </article>
-                <article class="element">
-                    <img class="element__image" src="images/elements/dombay.jpg" alt="Домбай">
-                    <div class="element__container">
-                        <h2 class="element__name">Домбай</h2>
-                        <button class="element__like-btn button"></button>
+                <article class="card">
+                    <img class="card__image" src="images/cards/dombay.jpg" alt="Домбай">
+                    <div class="card__container">
+                        <h2 class="card__name">Домбай</h2>
+                        <button type="button" class="card__like-btn button" area-label="Понравилось"></button>
                     </div>
                 </article>
-                <article class="element">
-                    <img class="element__image" src="images/elements/karachaevsk.jpg" alt="Карачаево-Черкессия">
-                    <div class="element__container">
-                        <h2 class="element__name">Карачаево-Черкессия</h2>
-                        <button class="element__like-btn button"></button>
+                <article class="card">
+                    <img class="card__image" src="images/cards/karachaevsk.jpg" alt="Карачаево-Черкессия">
+                    <div class="card__container">
+                        <h2 class="card__name">Карачаево-Черкессия</h2>
+                        <button type="button" class="card__like-btn button" area-label="Понравилось"></button>
                     </div>
                 </article>
-            </section>
-            <section class="popup">
-                <div class="popup__container">
-                    <form class="popup__form">
-                        <h2 class="popup__name">Редактировать профиль</h2>
-                        <input type="text" class="popup__input-fld popup__input-fld_type_name" value="" placeholder="Введите имя">
-                        <input type="text" class="popup__input-fld popup__input-fld_type_job" value="" placeholder="Введите род занятий">
-                        <input type="submit" class="popup__save-btn button" value="Сохранить">
-                    </form>
-                    <button class="popup__close-btn button"></button>
-                </div>
             </section>
         </main>
         <footer class="footer">
             <p class="footer__content">&copy; 2022 Mesto Russia</p>
         </footer>
+        <article class="popup">
+            <div class="popup__container">
+                <form class="popup__form" name="popupForm">
+                    <h2 class="popup__name">Редактировать профиль</h2>
+                    <input type="text" class="popup__input-fld popup__input-fld_type_name" name="name" placeholder="Введите имя">
+                    <input type="text" class="popup__input-fld popup__input-fld_type_job" name="job" placeholder="Введите род занятий">
+                    <button type="submit" class="popup__save-btn button">Сохранить</button>
+                </form>
+                <button type="button" class="popup__close-btn button" area-label="Закрыть"></button>
+            </div>
+        </article>
     </div>
     <script src="scripts/index.js"></script>
 </body>
