--- a/index.html
+++ b/index.html
@@ -17,52 +17,52 @@
                 <img class="profile__avatar" src="images/profile/avatar.jpg" alt="Аватар">
                 <div class="profile__info">
                     <h1 class="profile__name">Жак-Ив Кусто</h1>
-                    <button type="button" class="profile__edit-btn button" area-label="Изменить"></button>
+                    <button type="button" class="profile__edit-btn button"></button>
                     <p class="profile__job">Исследователь океана</p>
                 </div>
-                <button type="button" class="profile__add-btn button" area-label="Добавить"></button>
+                <button type="button" class="profile__add-btn button"></button>
             </section>
             <section class="cards content__section content__section_mobile">
                 <article class="card">
                     <img class="card__image" src="images/cards/karachaevsk.jpg" alt="Карачаевск">
                     <div class="card__container">
                         <h2 class="card__name">Карачаевск</h2>
-                        <button type="button" class="card__like-btn button" area-label="Понравилось"></button>
+                        <button type="button" class="card__like-btn button"></button>
                     </div>
                 </article>
                 <article class="card">
                     <img class="card__image" src="images/cards/elbrus.jpg" alt="Гора Эльбрус">
                     <div class="card__container">
                         <h2 class="card__name">Гора Эльбрус</h2>
-                        <button type="button" class="card__like-btn button" area-label="Понравилось"></button>
+                        <button type="button" class="card__like-btn button"></button>
                     </div>
                 </article>
                 <article class="card">
                     <img class="card__image" src="images/cards/dombay.jpg" alt="Домбай">
                     <div class="card__container">
                         <h2 class="card__name">Домбай</h2>
-                        <button type="button" class="card__like-btn button" area-label="Понравилось"></button>
+                        <button type="button" class="card__like-btn button"></button>
                     </div>
                 </article>
                 <article class="card">
                     <img class="card__image" src="images/cards/karelia.jpg" alt="Карелия">
                     <div class="card__container">
                         <h2 class="card__name">Карелия</h2>
-                        <button type="button" class="card__like-btn button" area-label="Понравилось"></button>
+                        <button type="button" class="card__like-btn button"></button>
                     </div>
                 </article>
                 <article class="card">
                     <img class="card__image" src="images/cards/dombay.jpg" alt="Домбай">
                     <div class="card__container">
                         <h2 class="card__name">Домбай</h2>
-                        <button type="button" class="card__like-btn button" area-label="Понравилось"></button>
+                        <button type="button" class="card__like-btn button"></button>
                     </div>
                 </article>
                 <article class="card">
                     <img class="card__image" src="images/cards/karachaevsk.jpg" alt="Карачаево-Черкессия">
                     <div class="card__container">
                         <h2 class="card__name">Карачаево-Черкессия</h2>
-                        <button type="button" class="card__like-btn button" area-label="Понравилось"></button>
+                        <button type="button" class="card__like-btn button"></button>
                     </div>
                 </article>
             </section>
@@ -72,13 +72,13 @@
         </footer>
         <article class="popup">
             <div class="popup__container">
-                <form class="popup__form" name="popupForm">
+                <form class="popup__form" name="form">
                     <h2 class="popup__name">Редактировать профиль</h2>
                     <input type="text" class="popup__input-fld popup__input-fld_type_name" name="name" placeholder="Введите имя">
                     <input type="text" class="popup__input-fld popup__input-fld_type_job" name="job" placeholder="Введите род занятий">
                     <button type="submit" class="popup__save-btn button">Сохранить</button>
                 </form>
-                <button type="button" class="popup__close-btn button" area-label="Закрыть"></button>
+                <button type="button" class="popup__close-btn button"></button>
             </div>
         </article>
     </div>
