--- a/index.html
+++ b/index.html
@@ -29,10 +29,28 @@
         </footer>
         <article class="popup popup_type_profile">
             <div class="popup__container">
-                <form class="popup__form" name="form">
+                <form class="popup__form" name="form" novalidate>
                     <h2 class="popup__name">Редактировать профиль</h2>
-                    <input type="text" class="popup__input-fld popup__input-fld_type_name" name="name" placeholder="Введите имя">
-                    <input type="text" class="popup__input-fld popup__input-fld_type_job" name="job" placeholder="Введите род занятий">
+                    <input
+                        required
+                        type="text"
+                        minlength="2"
+                        maxlength="40"
+                        class="popup__input-fld popup__input-fld_type_name"
+                        id="name"
+                        name="name"
+                        placeholder="Введите имя">
+                    <span id="name-error" class="popup__error"></span>
+                    <input
+                        required
+                        type="text"
+                        minlength="2"
+                        maxlength="200"
+                        class="popup__input-fld popup__input-fld_type_job"
+                        id="job"
+                        name="job"
+                        placeholder="Введите род занятий">
+                    <span id="job-error" class="popup__error"></span>
                     <button type="submit" class="popup__save-btn button">Сохранить</button>
                 </form>
                 <button type="button" class="popup__close-btn button"></button>
@@ -40,10 +58,26 @@
         </article>
         <article class="popup popup_type_card-adding">
             <div class="popup__container">
-                <form class="popup__form" name="adding-form">
+                <form class="popup__form" name="adding-form" novalidate>
                     <h2 class="popup__name">Новое место</h2>
-                    <input type="text" class="popup__input-fld" name="image-name" placeholder="Название">
-                    <input type="text" class="popup__input-fld" name="image-link" placeholder="Ссылка на картинку">
+                    <input
+                        required
+                        type="text"
+                        minlength="2"
+                        maxlength="30"
+                        class="popup__input-fld"
+                        id="image-name"
+                        name="image-name"
+                        placeholder="Название">
+                    <span id="image-name-error" class="popup__error"></span>
+                    <input
+                        required
+                        type="url"
+                        class="popup__input-fld"
+                        id="image-link"
+                        name="image-link"
+                        placeholder="Ссылка на картинку">
+                    <span id="image-link-error" class="popup__error"></span>
                     <button type="submit" class="popup__save-btn button">Создать</button>
                 </form>
                 <button type="button" class="popup__close-btn button"></button>
@@ -67,6 +101,8 @@
             </div>
         </article>
     </template>
+    <script src="scripts/initials.js"></script>
+    <script src="scripts/validate.js"></script>
     <script src="scripts/index.js"></script>
 </body>
 </html>
