--- a/index.html
+++ b/index.html
@@ -101,8 +101,7 @@
             </div>
         </article>
     </template>
-    <script src="scripts/initials.js"></script>
-    <script src="scripts/validate.js"></script>
-    <script src="scripts/index.js"></script>
+    <script src="scripts/utils/initials.js"></script>
+    <script type="module" src="scripts/pages/index.js"></script>
 </body>
 </html>
