review comments fixed

--- a/src/index.html
+++ b/src/index.html
@@ -116,19 +116,7 @@
             </div>
         </article>
     </div>
-    <template class="card-template card-template_type_default">
-        <article class="card">
-            <img class="card__image" alt="Изображение">
-            <div class="card__container">
-                <h2 class="card__name"></h2>
-                <div class="card__like-container">
-                    <button type="button" class="card__like-btn button"></button>
-                    <span class="card__like-counter"></span>
-                </div>
-            </div>
-        </article>
-    </template>
-    <template class="card-template card-template_type_user">
+    <template class="card-template">
         <article class="card">
             <img class="card__image" alt="Изображение">
             <button type="button" class="card__delete-btn button"></button>
